[package]
name = "changenn" # Oops, I guess someone took the name :)
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Intuitive, good-defaults changelog generation."
repository = "https://github.com/Froloket64/changen"

[[bin]]
name = "changen"
path = "src/main.rs"

[dependencies]
git2 = "0.20.2"
peeking-iter = "0.3.0"
